--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Hello World</title>
 </head>
 <body>
+
+    <header>
+        <div>Header</div>
+    </header>
+    
     <h3>Hello World</h3>
 </body>
 </html>
