--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <header>
         <div>Header</div>
     </header>
-    
+
     <h3>Hello World</h3>
+
+    <footer>
+        <div>Footer</div>
+    </footer>
 </body>
 </html>
