correzione titolo in index.html
aggiunto tag <main>

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
         <div>Header</div>
     </header>
 
-    <h3>Hello World</h3>
-
+    <main>
+        <h3>Hello World</h3>
+    </main>
+    
     <footer>
         <div>Footer</div>
     </footer>
